# java_repro

./: .bazelrc  MODULE.bazel  README.md  maven_install.json
